deployments/base/deployment.yaml
# deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-test-server
  namespace: go-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-test-server
  template:
    metadata:
      labels:
        app: go-test-server
    spec:
      containers:
        - name: go-test-server
          image: gcr.io/poetic-orb-430304-r9/go-test:v1.0.1
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "500m"
              memory: "1Gi"
            requests:
              cpu: "250m"
              memory: "512Mi"
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
