deployments/base/service.yaml
# service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-test-server
  namespace: go-test
spec:
  selector:
    app: go-test-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
